--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/http-client": "5.4.*",
         "symfony/intl": "5.4.*",
         "symfony/mailer": "5.4.*",
+        "symfony/mercure-bundle": "^0.3.8",
         "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "5.4.*",
@@ -44,7 +45,8 @@
         "symfony/yaml": "5.4.*",
         "symfonycasts/reset-password-bundle": "^1.19",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-json": "*"
     },
     "config": {
         "allow-plugins": {
