--- a/.env
+++ b/.env
@@ -42,9 +42,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
 # The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
-MERCURE_URL=http://127.0.0.1:8000/.well-known/mercure/ui/
+MERCURE_URL=http://localhost:52224/.well-known/mercure
 # The public URL of the Mercure hub, used by the browser to connect
-MERCURE_PUBLIC_URL=http://127.0.0.1:8000/.well-known/mercure/ui/
+MERCURE_PUBLIC_URL=http://localhost:52224/.well-known/mercure
 # The secret used to sign the JWTs
 MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
 ###< symfony/mercure-bundle ###
