sell-me systeme de paiemenet mis en place

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -49,7 +49,7 @@ security:
         - { path: ^/images/create, roles: [ ROLE_USER, ROLE_ADMIN ] }
 
 
-        - { path: ^//commandes/ajout, roles: [ ROLE_USER, ROLE_ADMIN ] }
+        - { path: ^/commandes/ajout, roles: [ ROLE_USER, ROLE_ADMIN ] }
 
 
 
