--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     images_directory: '%kernel.project_dir%/public/imageProduit'
     images_directory_chat: '%kernel.project_dir%/public/imageChat'
     fichiers_directory_chat: '%kernel.project_dir%/public/fichierChat'
+    photo_de_profil_directory: '%kernel.project_dir%/public/photoDeProfil'
 services:
     # default configuration for services in *this* file
     _defaults:
